# xrandrs

./: Cargo.toml  README.md
src/: config.toml  main.rs
